# forge

./: .dockerignore  .dockerignore.eval  .env.example  .forge_history  .gitignore  .mcp.json  .task-389.md  .task-409.md  .task-450.md  .task-541.md  AGENTS.md  AGENT_FORMATS.md  CLAUDE.md  CONTEXT_FIX_GUIDE.md  CONTRIBUTING_DOCKER.md  CUSTOM_COMMANDS.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.eval  GCC_AUTO_IMPLEMENTATION.md  GCC_IMPLEMENTATION.md  LICENSE  Makerfile  README.md  WINDOWS_SUPPORT.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  design_proposal.md  diesel.toml  docker-compose.yml  fix_context.py  fix_executor.py  flake.nix  forge.default.yaml  forge.schema.json  forge.yaml  install.sh  (+10 more)
crates/forge_acp/: Cargo.toml
crates/forge_acp/src/: agent.rs  conversion.rs  error.rs  lib.rs  server.rs
crates/forge_api/: Cargo.toml
crates/forge_api/src/: acp_adapter.rs  acp_conversion.rs  acp_error.rs  api.rs  config_watcher_handle.rs  executor.rs  file_changed_watcher_handle.rs  forge_api.rs  lib.rs  tests.rs
crates/forge_app/: Cargo.toml
crates/forge_app/src/: acp_app.rs  agent.rs  agent_definition.rs  agent_executor.rs  agent_orchestrator.rs  agent_provider_resolver.rs  agent_struct.rs  app.rs  app_config.rs  apply_tunable_parameters.rs  async_hook_queue.rs  attachment.rs  authenticator.rs  changed_files.rs  codebase_search_augmenter.rs  codebase_search_executor.rs  codebase_search_service.rs  command_generator.rs  compact.rs  compact_transform.rs  config_resolver.rs  conversation.rs  conversation_markdown.rs  data_gen.rs  diff.rs  doom_loop_detector.rs  env.rs  error.rs  executed_commands.rs  execution_result.rs  file_tracking.rs  fmt_input.rs  fmt_output.rs  front_matter.rs  gcc_integration_test.rs  git_app.rs  global_config.rs  handlebars_helpers.rs  hook_matcher.rs  hook_runtime.rs  (+49 more)
crates/forge_app/tests/: orch-test.rs  orch_spec.rs  orchestrator_test_helpers.rs  walker_sync_preset.rs
crates/forge_app_server/: Cargo.toml  build.rs
crates/forge_app_server/src/: lib.rs  main.rs  message_processor.rs  outgoing_sender.rs  server.rs  translation.rs
crates/forge_config/: .config.json  .config.toml  .forge.toml  Cargo.toml
crates/forge_config/src/: auto_dump.rs  compact.rs  config.rs  config.yaml  decimal.rs  error.rs  float.rs  forge_config.rs  hooks.rs  http_config.rs  legacy.rs  lib.rs  merge.rs  model.rs  model_config.rs  percentage.rs  preset.rs  read.rs  reader.rs  reasoning.rs  retry.rs  retry_config.rs  util.rs  writer.rs
crates/forge_config/tests/: schema.rs
crates/forge_display/: Cargo.toml
crates/forge_display/src/: code.rs  color.rs  diff.rs  lib.rs  markdown.rs  ripgrep.rs  title.rs
crates/forge_env/: Cargo.toml  env.json
crates/forge_env/src/: env.rs  env_retry.rs  http_config.rs  http_env.rs  lib.rs  retry_config.rs
crates/forge_indexer/: Cargo.toml
crates/forge_indexer/src/: chunker.rs  config.rs  domain.rs  embedder.rs  lib.rs  loader.rs  main.rs  pipeline.rs  qdrant.rs  reranker.rs  traits.rs  transform.rs
crates/forge_inte/: Cargo.toml  README.md
crates/forge_inte/tests/: api_spec.rs  cat.md  mock_helper.rs  retry_tests.rs  test_workflow.rs
crates/forge_jsonrpc/: Cargo.toml
crates/forge_jsonrpc/src/: error.rs  lib.rs  server.rs  test_utils.rs
crates/forge_jsonrpc/tests/: integration_tests.rs  unit_tests.rs
crates/forge_lsp/: Cargo.toml
crates/forge_lsp/src/: client.rs  install.rs  language.rs  lib.rs  manager.rs  server.rs  transport.rs
crates/forge_main/: Cargo.toml  build.rs
crates/forge_main/src/: acp_runner.rs  auto_update.rs  banner.rs  built_in_commands.csv  built_in_commands.json  built_in_commands.rs  cli.rs  cli_format.rs  config.rs  conversation_selector.rs  display_constants.rs  editor.rs  editor_impl.rs  editor_tests.rs  env.rs  errors.rs  format_utils.rs  image_paste.rs  info.rs  input.rs  lib.rs  main.rs  message_display.rs  model.rs  oauth_callback.rs  porcelain.rs  prompt.rs  prompt_selector.rs  rprompt.rs  rprompt_fast.rs  sandbox.rs  select.rs  snapshot.rs  state.rs  stream_renderer.rs  sync_display.rs  title_display.rs  tools_display.rs  tracker.rs  ui.rs  (+9 more)
crates/forge_main/tests/: cli_rename_tests.rs  snapshot_integration_tests.rs
crates/forge_markdown_stream/: Cargo.toml
crates/forge_markdown_stream/examples/: demo.rs
crates/forge_markdown_stream/src/: heading.rs  inline.rs  lib.rs  list.rs  renderer.rs  repair.rs  table.rs  theme.rs  thinking_state.rs  utils.rs
crates/forge_provider/: Cargo.toml  README.md  build.rs
crates/forge_provider/src/: builder.rs  client.rs  crypto.rs  error.rs  event.rs  lib.rs  mock_client.rs  model.rs  retry.rs  test_utils.rs
crates/forge_provider/tests/: integration_test.rs  mock_client_test.rs
crates/forge_repo/: Cargo.toml  build.rs
crates/forge_repo/proto/: forge.proto
crates/forge_repo/src/: agent.rs  agent_definition.rs  agent_repository.rs  app_config.rs  auth_credential.rs  auth_flow.rs  auth_storage.rs  cacache_repository.rs  context_engine.rs  conversation.rs  credential.rs  credentials.rs  forge_repo.rs  fs_snap.rs  indexing.rs  indexing_auth.rs  lib.rs  plugin.rs  provider.json  provider.rs  provider_anthropic_repo.rs  provider_bedrock_repo.rs  provider_openai_repo.rs  session.rs  skill.rs  skill_repository.rs  skill_search.rs  tree_sitter_impl.rs  validation.rs  validation_repository.rs  workspace.rs  workspace_fix.rs  workspace_sync.rs
crates/forge_shell_smoke/: Cargo.toml  README.md
crates/forge_shell_smoke/src/: lib.rs  paths.rs  pty.rs  report.rs
crates/forge_snaps/: Cargo.toml
crates/forge_snaps/src/: lib.rs  service.rs  snapshot.rs
crates/forge_snapshot/: Cargo.toml
crates/forge_snapshot/src/: cli.rs  lib.rs  service.rs
crates/forge_spinner/: Cargo.toml
crates/forge_test_kit/: Cargo.toml
crates/forge_walker/: Cargo.toml
server/: Cargo.toml  Dockerfile  build.rs  docker-compose.external-ollama.yml  docker-compose.yml
server/scripts/: start.sh
server/src/: auth.rs  chunker.rs  config.rs  db.rs  embedder.rs  main.rs  qdrant.rs  server.rs
(+1935 files in other folders)
