[package]
name = "forge-workspace-server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Vector database
qdrant-client = "1"

# HTTP client (Ollama API)
reqwest = { version = "0.12", features = ["json"] }

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Hashing (must match forge client's compute_hash)
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI arguments
clap = { version = "4", features = ["derive", "env"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
pretty_assertions = "1"
