[package]
name = "forge_acp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["io-std"] }
tokio-util = { workspace = true, features = ["compat"] }
uuid.workspace = true
agent-client-protocol = "0.10.4"
