[package]
name = "forge_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
forge_domain.workspace = true
forge_stream.workspace = true
forge_services.workspace = true

forge_infra.workspace = true








forge_app.workspace = true
humantime.workspace = true

[dev-dependencies]

tokio = { workspace = true }


