[package]
name = "forge_api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
url.workspace = true
async-trait.workspace = true
forge_domain.workspace = true
forge_stream.workspace = true
forge_services.workspace = true
forge_repo.workspace = true
forge_infra.workspace = true
futures.workspace = true
agent-client-protocol.workspace = true
base64.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "io-util", "rt"] }
tokio-util = { workspace = true, features = ["compat"] }
tracing.workspace = true
chrono.workspace = true







forge_app.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true }


