[package]
name = "forge_config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
config = { version = "0.15", features = ["toml"] }
derive_more.workspace = true
derive_setters.workspace = true
dirs.workspace = true
tokio = { workspace = true, features = ["fs"] }
serde.workspace = true
toml_edit = { workspace = true }
url.workspace = true
fake = { version = "5.1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions.workspace = true
