[package]
name = "forge_display"
version = "0.1.0"
edition = "2021"

[dependencies]
forge_domain = { path = "../forge_domain" }
colored = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
similar = { version = "2.4", features = ["inline"]}
console = "0.15.7"

[dev-dependencies]
insta = { version = "1.42.0" }
