[package]
name = "forge_env"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
derive_more.workspace = true
derive_setters.workspace = true
merge.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
url.workspace = true
fake = { version = "5.1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions.workspace = true
