[package]
name = "forge_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_setters.workspace = true
forge_walker.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-stream.workspace = true
text-splitter = { version = "0.27.0", features = ["code"]}
tree-sitter.workspace = true
tree-sitter-rust.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio.workspace = true
