[package]
name = "forge_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.5"
derive_setters = "0.1"
async-stream = "0.3"
pretty_assertions = "1.4"
