[package]
name = "forge_indexer"
version = "0.1.0"
edition = "2024"

[[bin]]
path="src/main.rs"
name="indexer"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.5"
derive_setters = "0.1"
async-stream = "0.3"
pretty_assertions = "1.4"
walkdir = "2.0"
text-splitter = {version="0.27.0", features=["code"]}
tree-sitter-rust.workspace = true
async-openai = "0.29.0"
qdrant-client = "1.15.0"
uuid = { version = "1.0", features = ["v4"] }
dotenv.workspace = true
clap = { version = "4.0", features = ["derive"] }