[package]
name = "forge_inte"
version = "0.1.0"
edition = "2021"

# Include the mock_data directory in the package
include = [
    "**/*.rs",
    "Cargo.toml",
    "tests/mock_data/**/*.json",
    "tests/mock_data/README.md",
    "tests/cat.md"
]

[dev-dependencies]
anyhow.workspace = true
forge_api.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde_yml.workspace = true
forge_tracker.workspace = true
forge_domain.workspace = true

[dependencies]
dotenv.workspace = true
