[package]
name = "forge_jsonrpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
schemars = { version = "0.8", features = ["derive"] }
async-trait.workspace = true
dirs.workspace = true
futures.workspace = true

# Internal crates
forge_api.workspace = true
forge_domain.workspace = true
forge_stream.workspace = true
forge_app.workspace = true

[dev-dependencies]
forge_config.workspace = true
