[package]
name = "forge_main"
version.workspace = true
edition.workspace = true
authors = ["Your Name <your.email@example.com>"]
description = "A development tool with file snapshot capabilities"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
sha2.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio.workspace = true
tempfile.workspace = true
similar.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
