[package]
name = "forge_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
regex.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
derive_more.workspace = true
derive_setters.workspace = true
reqwest-eventsource.workspace = true
strum.workspace = true
strum_macros.workspace = true
forge_domain.workspace = true
anyhow.workspace = true
thiserror.workspace = true
derive_builder.workspace = true
http.workspace = true
env_logger = "0.10.0"
log = "0.4.20"

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true

[[bin]]
name = "record_mocks"
path = "src/bin/record_mocks.rs"

[[bin]]
name = "update_mocks"
path = "src/bin/update_mocks.rs"

[[bin]]
name = "record_integration_test_mocks"
path = "src/bin/record_integration_test_mocks.rs"