[package]
name = "forge_repo"
version = "0.1.0"
edition = "2021"

[features]
tree_sitter_validation = [
    "tree-sitter",
    "tree-sitter-rust",
    "tree-sitter-python",
    "tree-sitter-typescript",
    "tree-sitter-css",
    "tree-sitter-java",
    "tree-sitter-scala",
    "tree-sitter-go",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-c-sharp",
    "tree-sitter-c",
    "tree-sitter-php",
    "tree-sitter-swift",
    "tree-sitter-kotlin-ng",
    "tree-sitter-dart",
    "tree-sitter-yaml",
    "tree-sitter-toml-ng",
    "tree-sitter-bash",
    "tree-sitter-html",
    "tree-sitter-json",
    "tree-sitter-sequel",
    "tree-sitter-powershell"
]

[dependencies]
forge_app.workspace = true
forge_domain.workspace = true
forge_infra.workspace = true
forge_snaps.workspace = true
forge_fs.workspace = true
forge_template.workspace = true

anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true
bytes.workspace = true
strum.workspace = true
reqwest-eventsource.workspace = true
handlebars.workspace = true
merge.workspace = true
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.12", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"
thiserror.workspace = true
derive_more.workspace = true
gray_matter = { workspace = true }
dirs.workspace = true

# gRPC for codebase client
tonic.workspace = true
prost = "0.14.1"

prost-types = "0.14.1"
tonic-prost = "0.14.2"

# Tree-sitter dependencies (optional)
tree-sitter = { version = "0.25.1", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-scala = { version = "0.24", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-php = { version = "0.24.2", optional = true }
tree-sitter-swift = { version = "0.7.1", optional = true }
tree-sitter-kotlin-ng = { version = "1.1.0", optional = true }
tree-sitter-dart = { version = "0.0.4", optional = true }
tree-sitter-yaml = { version = "0.7.2", optional = true }
tree-sitter-toml-ng = { version = "0.7.0", optional = true }
tree-sitter-bash = { version = "0.25.0", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-sequel = { version = "0.3.11", optional = true }
tree-sitter-powershell = { version = "0.25.9", optional = true }

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
forge_test_kit.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = "3.2"
fake = { version = "4.4.0", features = ["derive"] }
derive_setters.workspace = true
