[package]
name = "forge_snaps"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
forge_fs.workspace = true
forge_walker.workspace = true
fnv_rs.workspace = true
base64 = "0.22.1"
serde_json = "1.0.140"
serde = { version = "1.0.217", features = ["derive"] }
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.17.1"
tokio = {version = "1.43.0", features = ["full"]}
