[package]
name = "forge_snapshot"
version = "0.1.0"
edition = "2024"
description = "File snapshot system for automatic versioning and recovery"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
walkdir = "2.4"
similar = "2.4"
colored = "3.0"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
forge_domain = { path = "../forge_domain" }
forge_api = { path = "../forge_api" }
regex = "1.10.3"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
assert_fs = "1.1"
predicates = "3.1"
filetime = "0.2"

[[bin]]
name = "forge-snapshot"
path = "src/bin/forge-snapshot.rs"
