[package]
name = "forge_snapshot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "File snapshot system for automatic versioning and recovery"

[dependencies]
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
chrono = "0.4.31"
async-trait = "0.1.77"
tokio = { version = "1.35.1", features = ["full"] }
similar = "2.4.0"

[dev-dependencies]
tempfile = "3.9.0"
tokio-test = "0.4.3"
