[package]
name = "forge_test_kit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
forge_shell_smoke = { path = "../forge_shell_smoke", optional = true }

[features]
default = []
json = ["serde", "serde_json"]
pty = ["dep:forge_shell_smoke"]

[lib]
doctest = false
